@@ -1,3 +1,9 @@
+Wed Mar  2 23:43:45 CET 2011  John Tytgat  <John.Tytgat@aaug.net>
+
+	* signal/killpg.c: Add.
+	* Makefile.am (killpg): Add.
+	* include/signal.h (kill, killpg): Conditionalize declarations.
+
 Tue Mar  1 23:29:38 CET 2011  Jeffrey Lee  <me@phlamethrower.co.uk>
 
 	* sys/_getcpuarch.s (__get_cpu_arch): Support ARM arch 7.
